Thu Sep  3 20:29:18 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_raw_obj_info): iseq->body->location.first_lineno is Fixnum.

Thu Sep  3 17:54:26 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (raise_method_missing): "names" should be singular.
	  pointed out by Filip Bartuzi.

Thu Sep  3 17:50:09 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_raw_obj_info): should support IMEMO/iseq.

Thu Sep  3 10:07:49 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (raise_method_missing): refine error messages when a
	  symbol is not given.  [Fix GH-1013]

Wed Sep  2 18:49:55 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/psych/*: merge psych master(8737e5b). It contains following fixes.
	  https://github.com/tenderlove/psych/pull/242
	  https://github.com/tenderlove/psych/pull/246 [ruby-list:50219]
	* test/psych/*: ditto.

Wed Sep  2 18:04:13 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.h (GET_PC_COUNT): remove unused macro.

Wed Sep  2 17:18:37 2015  Chris Schneider  <chris@christopher-schneider.com>

	* process.c (proc_detach): [DOC] fix typo "intent" as "intend" in
	  rdoc.  [Fix GH-1011]

Wed Sep  2 16:58:21 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_realpath_internal): use filesystem encoding if the
	  argument is in ASCII encodings.

	* win32/file.c (rb_readlink): needs the result encoding.

Tue Sep  1 18:37:15 2015  Koichi Sasada  <ko1@atdot.net>

	* test/thread/test_queue.rb: catch up last commit.

Tue Sep  1 18:16:32 2015  Koichi Sasada  <ko1@atdot.net>

	* thread_sync.c (queue_do_close): ignore multiple close to allow
	  multiple producers.
	  https://bugs.ruby-lang.org/issues/10600#note-14

Tue Sep  1 18:06:26 2015  Koichi Sasada  <ko1@atdot.net>

	* thread_tools.c: rename thread_tools.c to thread_sync.c.

Mon Aug 31 17:04:45 2015  Koichi Sasada  <ko1@atdot.net>

	* class.c (move_refined_method): should insert a write barrier
	  from an original class to a created (cloned) method entry.
